--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test,features}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:cucumber": "node ./node_modules/@cucumber/cucumber/bin/cucumber-js features/**/*.feature --require features/steps/**/*.ts --require-module ts-node/register --format @cucumber/pretty-formatter --format json:reports/report.json --format summary",
+    "test:nyc": "nyc --include=src/**/*.ts --exclude=src/**/*.spec.ts --exclude=src/**/*.model.ts --exclude=features/steps/**/*.ts npm run test:cucumber",
+    "test:cucumber": "node ./node_modules/@cucumber/cucumber/bin/cucumber-js features/*.feature --parallel 6 --require features/steps/**/*.spec.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format json:reports/report.json  --format summary",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -42,13 +43,13 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "cucumber-pretty": "^6.0.1",
     "cucumber-tsflow": "^4.4.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "jest": "^29.5.0",
+    "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -70,9 +71,10 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "product/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "testPathIgnorePatterns":["order"],
     "testEnvironment": "node"
   }
 }
